prod ready beta

--- a/src/contentScript/contentScript.css
+++ b/src/contentScript/contentScript.css
@@ -1,4 +1,4 @@
-.overlayCard {
+/* .overlayCard {
   position: fixed;
   left: 5%;
   top: 15%;
@@ -6,4 +6,4 @@
   max-height: 240px;
   background-color: #f5f5f5 !important;
   z-index: 99999;
-}
+} */
